# memoir-AI

./: .gitignore  .pre-commit-config.yaml  BATCH_CLASSIFICATION_IMPLEMENTATION.md  CONTEXTUAL_HELPER_IMPLEMENTATION.md  DATABASE_IMPLEMENTATION.md  DEVELOPMENT.md  MIGRATION_IMPLEMENTATION.md  Makefile  PYDANTIC_AI_IMPLEMENTATION.md  README.md  TEXT_CHUNKER_IMPLEMENTATION.md  add_none_returns.py  pyproject.toml  related_projects.md  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_hierarchical_batch_classification.py
.kiro/specs/memoir-ai-library/: design.md  requirements.md  tasks.md
dev_specs/: design.md  requirements.md  tasks.md
examples/: basic_usage.py  batch_classification_usage.py  classification_system_usage.py  complete_query_workflow.py  complete_workflow_demo.py  contextual_helper_usage.py  database_usage.py  dedupe_categories.py  llm_end_to_end_demo.py  migration_usage.py  pydantic_ai_usage.py  query_strategy_usage.py  text_chunker_usage.py  token_budget_system_usage.py
examples/sample_data_set/: news_26_09_2025_0.py
memoir_ai/: __init__.py  config.py  core.py  exceptions.py  models.py
memoir_ai/aggregation/: __init__.py  budget_manager.py  pruning_engine.py  result_aggregator.py  summarization_engine.py
memoir_ai/classification/: __init__.py  batch_classifier.py  category_manager.py  iterative_classifier.py
memoir_ai/database/: __init__.py  engine.py  migration_manager.py  models.py
memoir_ai/database/migrations/: alembic.ini  env.py
memoir_ai/database/migrations/versions/: 001_initial_schema.py
memoir_ai/llm/: __init__.py  agents.py  context_windows.py  interactions.py  schemas.py
memoir_ai/query/: __init__.py  chunk_retrieval.py  query_processor.py  query_strategy_engine.py
memoir_ai/text_processing/: __init__.py  chunker.py  contextual_helper.py
tests/: __init__.py  test_batch_classifier.py  test_budget_manager.py  test_category_manager.py  test_chunk_retrieval.py  test_config.py  test_contextual_helper.py  test_database_integration.py  test_database_manager.py  test_database_models.py  test_iterative_classifier.py  test_llm_agents.py  test_llm_interactions.py  test_llm_schemas.py  test_migration_manager.py  test_pruning_engine.py  test_query_processor.py  test_query_strategy_engine.py  test_result_aggregator.py  test_summarization_engine.py  test_text_chunker.py
